--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <hr>
             <nav class="menu">
                 <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/" target="_self">INICI</a>
-                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/nosaltres/nosaltres.html" target="_self"">SOBRE MI</a>
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/nosaltres/nosaltres.html" target="_self">SOBRE MI</a>
                 <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/receptes/recepta.html" target="_self">RECEPTES</a>
                 <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/contacte/contacte.html" target="_self">CONTACTE</a>
                 <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/llistat/llistat.html" target="_self">ALTRES COSES</a>
