--- a/receptes/llistaReceptes.html
+++ b/receptes/llistaReceptes.html
@@ -18,11 +18,11 @@
             </div>
             <hr>
             <nav class="menu">
-                <a class="enllas" href="https://nccitb.github.io/pt3_canellas_oriol_carol_narcis_CSS/" target="_self">INICI</a>
-                <a class="enllas" href="https://nccitb.github.io/pt3_canellas_oriol_carol_narcis_CSS/nosaltres/nosaltres.html" target="_self">SOBRE MI</a>
-                <a class="enllas" href="https://nccitb.github.io/pt3_canellas_oriol_carol_narcis_CSS/receptes/llistaReceptes.html" target="_self">RECEPTES</a>
-                <a class="enllas" href="https://nccitb.github.io/pt3_canellas_oriol_carol_narcis_CSS/contacte/contacte.html" target="_self">CONTACTE</a>
-                <a class="enllas" href="https://nccitb.github.io/pt3_canellas_oriol_carol_narcis_CSS/llistat/llistat.html" target="_self">ALTRES COSES</a>
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/" target="_self">INICI</a>
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/nosaltres/nosaltres.html" target="_self">SOBRE MI</a>
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/receptes/llistaReceptes.html" target="_self">RECEPTES</a>
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/contacte/contacte.html" target="_self">CONTACTE</a>
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/llistat/llistat.html" target="_self">ALTRES COSES</a>
             </nav>
             <hr>
         </header>
