--- a/nosaltres/nosaltres.html
+++ b/nosaltres/nosaltres.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="css/estils.css">
     </head>
     <body>
-        <img src="imatges/narcis.jpg">
-        <img src="imatges/oriol.jpg">
+        <img src="../imatges/narcis.jpg">
+        <img src="../imatges/oriol.jpg">
     </body>
