--- a/nosaltres/nosaltres.html
+++ b/nosaltres/nosaltres.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="es-es">
     <head>
-    <meta charset="UTF-8">
-    <title>pt3_canelles_oriol_carol_narcis</title>
-    <link rel="stylesheet" href="css/estils.css">
+        <meta charset="UTF-8">
+        <title>pt3_canelles_oriol_carol_narcis</title>
+        <link rel="stylesheet" href="../css/estils.css">
     </head>
     <body>
+        <header class="header">
+            <div class="logo">
+                <img src="../imatges/Logo-Delicias.png">
+            </div>
+            <hr>
+            <nav class="menu">
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/" target="_self">INICI</a>
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/nosaltres/nosaltres.html" target="_self">SOBRE MI</a>
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/receptes/recepta.html" target="_self">RECEPTES</a>
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/contacte/contacte.html" target="_self">CONTACTE</a>
+                <a class="enllas" href="https://nccitb.github.io/Pt3.3-XML-XSLT/llistat/llistat.html" target="_self">ALTRES COSES</a>
+            </nav>
+            <hr>
+        </header>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <img src="../imatges/narcis.jpg">
     </body>
